<resources>
    <string name="app_name">TodoEkspert</string>
    <string name="action_settings">Settings</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="todo_login">Login</string>
    <string name="this_field_is_required">This field is required</string>
    <string name="login_ok">Login OK</string>
    <string name="wrong_username_or_password">Wrong username or password!</string>
    <string name="title_activity_tdo_list">TodoEkspertList</string>
    <string name="action_add">Add</string>
    <string name="todo_ekspert">TodoEkspert</string>
    <string name="refresh">Refresh</string>
    <string name="logout">Logout</string>
    <string name="title_activity_add_todo">Add new Todo</string>
    <string name="what_needs">What needs to be done?</string>
    <string name="Done">Done</string>
    <string name="add_todo">Add Todo</string>

</resources>
